Fixed dropdown menu in guests show.blade.php with z-index

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10043,6 +10043,14 @@ h3 {
   color: #b4b4b4;
 }
 
+.drop-down-user {
+  z-index: 1;
+}
+
+.carrello {
+  z-index: -1;
+}
+
 .restaurant_container {
   max-width: 1170px;
   margin: auto;
